--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   shimmer: ^1.1.2
   flutter_search_bar: ^2.1.0
   webview_flutter: ^1.0.7
+  sqflite: ^1.3.2+1
+  path_provider: ^1.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
